<resources>
    <string name="app_name">Splash It</string>

    <string name="photos_label">Лента</string>
    <string name="profile">Профиль</string>
    <string name="photos">фотографии</string>
    <string name="loading_photo">Загрузка фото…</string>
    <string name="photo_loaded">Фото загружено</string>
    <string name="open">открыть</string>

    <!-- UserInfo Fragment -->
    <string name="user_name">Alex Victor</string>
    <string name="nickname">alexosesso</string>
    <string name="status">Follow 4 follow, my fans</string>
    <string name="location">San Francisco, CA</string>
    <string name="email">alexosesso@fmail.com</string>
    <string name="downloads">69</string>

    <string name="current_user_downloads">%1$s\nфотографии</string>
    <string name="current_user_likes">%1$s\nпонравилось</string>
    <string name="current_user_collections">%1$s\nколлекции</string>

    <string name="likes">понравилось</string>
    <string name="collections">коллекции</string>
    <string name="curentusericon">CurentUserIcon</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="user_info">About @%1$s:\n%2$s</string>
    <string name="photo_info">Made with: %1$s\nModel: %2$s\nExposure: %3$s\nAperture: %4$s\nFocal Length: %5$s\nISO: %6$s</string>
    <string name="no_information">no information</string>
    <string name="first_screen_label">Создавайте снимки, публикуйте, собирайте аудиторию, получайте фидбек!</string>
    <string name="second_screen_label_text">Делитесь с друзьями, собирайте коллекции</string>
    <string name="to_next_page">to next page</string>
    <string name="third_screen_label_text">Загружайте любимые снимки и отслеживайте статистику</string>
    <string name="to_previous_page">to previous page</string>
    <string name="no_internet">Нет сети. Обновите страницу</string>

</resources>